--- a/public/content/fonts/iransans/css/style.css
+++ b/public/content/fonts/iransans/css/style.css
@@ -71,18 +71,21 @@ h1 {
 	display: none;
 }
 
-.modal-scroll::-webkit-scrollbar-thumb {
-	width: 26px;
-	border-radius: 13px;
-	background-clip: padding-box;
-	border: 3px solid #fff
-}
-
-.modal-scroll::-webkit-scrollbar-thumb {
-	box-shadow: inset 0 0 0 10px;
-	color: #ddd !important
+.modal-scroll {
+	scrollbar-width: thin;
+	scrollbar-color: #ddd #fff;
 }
 
 .modal-scroll::-webkit-scrollbar {
-	width: 12px
+	width: 12px;
+}
+
+.modal-scroll::-webkit-scrollbar-track {
+	background: #fff;
+}
+
+.modal-scroll::-webkit-scrollbar-thumb {
+	background-color: #ddd;
+	border-radius: 10px;
+	border: 3px solid #fff;
 }
